# addSubtitlesToVideo

./: .gitignore  CMakeLists.txt  README.md  build_project.bat
docs/: DEVELOPMENT_GUIDE.md  INTERFACE.md  progress.md  technical_specification.md
scripts/: debug_params.py  gpu_diagnose.py  requirements.txt  transcribe.py
src/: FileDropListWidget.cpp  FileDropListWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
